--- a/CBT/templates/index.html
+++ b/CBT/templates/index.html
@@ -13,12 +13,10 @@
                 <h2 class="text-center font-weight-bold pt-3 pb-3 flex-fill ">Selamat Mengerjakan!</h2>
 
                 <a class="btn btn-success btn-lg text-uppercase js-scroll-trigger mb-2" href="{% url 'test:join' %}">Mulai Mengerjakan</a>
-                <a class="btn btn-success btn-lg text-uppercase js-scroll-trigger mb-2" href="{% url 'test:resume' %}">Lanjutkan Test Saya</a>
+                <a class="btn btn-success btn-lg text-uppercase js-scroll-trigger mb-2" href="{% url 'test:resume' %}">Lanjut Mengerjakan</a>
+                <a class="btn btn-success btn-lg text-uppercase js-scroll-trigger mb-2" href="{% url 'test:findScore' %}">Pengumuman Nilai</a>
                 <p class="mt-1"><hr></p>
-               
                 <a class="mb-4 btn btn-warning btn-lg text-uppercase js-scroll-trigger" href="#">Buat Sebuah Test</a>
-                           <!-- <h2 class="text-center font-weight-bold pt-3 flex-fill ">CBT SIMPEL</h2> -->
-
               </div>
             </div>
           </div>
