--- a/Test/templates/Test/verifyAnswer.html
+++ b/Test/templates/Test/verifyAnswer.html
@@ -34,13 +34,26 @@ KONFIRMASI IDENTITAS DAN JAWABAN
             <div class="alert alert-success text-left" role="alert">        
     <h4 class="alert-heading">Selamat ! Anda telah menyelesaikan seluruh pertanyaan</h4>
     <hr>
-    <p class="mb-0">Silakan memeriksa kembali jawaban anda!</p>
+    <p class="mb-0">Silakan memeriksa kembali identitas dan jawaban anda!</p>
     {% endif %}
-  </div>    
+  </div>  
+  <main id="top">
+
     <ul class="list-group block text-left list-group-flush">
-        <li class="list-group-item justify-content-left"><div class="row">
-            <div class="bg-primary p-1 px-2 rounded ">Sisa Waktu : <span class="time"></span></div>
-            </div></li>
+      <li class="list-group-item justify-content-between"><div class="row justify-content-between">
+          <div class="bg-success p-1 px-2 rounded text-white">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-stopwatch" viewBox="0 0 16 16">
+              <path d="M8.5 5.6a.5.5 0 1 0-1 0v2.9h-3a.5.5 0 0 0 0 1H8a.5.5 0 0 0 .5-.5V5.6z"/>
+              <path d="M6.5 1A.5.5 0 0 1 7 .5h2a.5.5 0 0 1 0 1v.57c1.36.196 2.594.78 3.584 1.64a.715.715 0 0 1 .012-.013l.354-.354-.354-.353a.5.5 0 0 1 .707-.708l1.414 1.415a.5.5 0 1 1-.707.707l-.353-.354-.354.354a.512.512 0 0 1-.013.012A7 7 0 1 1 7 2.071V1.5a.5.5 0 0 1-.5-.5zM8 3a6 6 0 1 0 .001 12A6 6 0 0 0 8 3z"/>
+            </svg>
+             Sisa Waktu : <span class="time"></span></div>
+          <button class="btn btn-success py-1 px-2 ">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+              <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+              <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
+            </svg>
+            Ubah Data</button>
+          </div></li>
       <li class="list-group-item"><div class="row">
           <div class="col-md-3 pl-2 my-auto"><div class="card-title text-muted my-auto h6 text-uppercase">Nama Peserta</div></div>
           <div class="col-md-9 pl-2"><div class="card-text my-auto">{{takerQuery.testTakerName}}</div></div>
@@ -95,29 +108,48 @@ KONFIRMASI IDENTITAS DAN JAWABAN
             </ul>
           </div>
           </li>
-        <li class="list-group-item"><div class="row">
-        <small class="form-text text-muted">Dengan mengklik tombol <strong> Kirim Jawaban Saya</strong>
-        sesi anda akan dihapus dan jawaban dikirimkan kepada penyedia tes. Anda tidak dapat mengubah jawaban setelah mengirim.</small>
-        </li>
+        
 
 
     {% if answerQuery|length < questionCount and packQuery.settings.completeRequired %}
         <h5 class="text-center"> <a href="{{lastQuest}}">Selesaikan seluruh  jawaban </a> atau habiskan waktu sebelum mengirim jawaban</h4>
     {% else %}
-    <form method="post">
-        {% csrf_token %}
-        <button type="submit" class="btn btn-primary">Kirim Jawaban Saya</button>
-    </form>
+    <button type="button" class="btn btn-success" data-toggle="modal" data-target="#exampleModal">
+      Kirim Jawaban Saya
+    </button>
+    
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Yakin?</h5>
+          </div>
+          <div class="modal-body">
+            <p class="form-text text-muted">Dengan mengklik tombol <strong> Kirim Jawaban Saya</strong>
+              sesi anda akan dihapus dan seluruh jawaban dikirimkan kepada penyedia tes. Anda tidak dapat mengubah jawaban setelah mengirim.</p>
+                </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-danger" data-dismiss="modal">Batal</button>
+            <form method="post">
+              {% csrf_token %}
+              <button type="submit" class="btn btn-success">Kirim Jawaban Saya </button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+    
     {% endif %}
+</div>
+  </main>  
     <script>
-        
         form = document.getElementsByTagName('form')[0] 
         now = {{timeNow |date:"U"}} 
         setInterval(() => {
             makeTimer(({{takerQuery.timeStart |date:"U"}}+{{takerQuery.timeLimit}}*60),now,'.time',() =>  { form.submit()})
             now += 1
         }, 1000)
+        var _0x153f=['2XgPUXH','2269VaSRsM','90KXJmRv','172nJIhbI','23176EoJDRN','7gKsnEe','form','492257NETfGS','565901Fmqgpy','68cNLNni','submit','73867beFZiS','556321PHHyYF','2487XEIprA','.time'];function _0x10b8(_0x1790de,_0x3a79ea){return _0x10b8=function(_0x153fd5,_0x10b8f7){_0x153fd5=_0x153fd5-0x1e7;var _0x9a0d3f=_0x153f[_0x153fd5];return _0x9a0d3f;},_0x10b8(_0x1790de,_0x3a79ea);}(function(_0x54b070,_0x328a3e){var _0x28a810=_0x10b8;while(!![]){try{var _0x6e8922=parseInt(_0x28a810(0x1ec))*-parseInt(_0x28a810(0x1f3))+parseInt(_0x28a810(0x1f2))*-parseInt(_0x28a810(0x1eb))+parseInt(_0x28a810(0x1ee))*-parseInt(_0x28a810(0x1e8))+parseInt(_0x28a810(0x1ea))+-parseInt(_0x28a810(0x1f0))*-parseInt(_0x28a810(0x1f5))+-parseInt(_0x28a810(0x1ef))+parseInt(_0x28a810(0x1f4))*parseInt(_0x28a810(0x1e7));if(_0x6e8922===_0x328a3e)break;else _0x54b070['push'](_0x54b070['shift']());}catch(_0x42a528){_0x54b070['push'](_0x54b070['shift']());}}}(_0x153f,0x9dce9),function(){var _0x293c91=_0x10b8;form=document['getElementsByTagName'](_0x293c91(0x1e9))[0x0],now={{timeNow |date:"U"}} ,setInterval(()=>{var _0xc2b130=_0x293c91;makeTimer({{takerQuery.timeStart |date:"U"}}+{{takerQuery.timeLimit}}*0x3c,now,_0xc2b130(0x1f1),()=>{var _0x359fef=_0xc2b130;form[_0x359fef(0x1ed)]();}),now+=0x1;},0x3e8);}());
     </script>    
-
-</div>
 {% endblock no_container %}
